--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <li class="name">
         <h1>
           <a href="/">
-            <i class="fi-play-video"></i> MovieStore
+            <i class="fi-play-video"></i> BookStore
           </a>
         </h1>
       </li>
@@ -35,7 +35,7 @@
         <li class="has-form">
           <div class="row collapse">
             <div class="large-8 small-9 columns">
-              <input type="text" class="radius-ls expand" placeholder="Find Movie">
+              <input type="text" class="radius-ls expand" placeholder="Find Book">
             </div>
             <div class="large-4 small-3 columns">
               <a href="#" class=" radius-rs button">Search</a>
