--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "MovieStore - Online movies" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "BookStore - Online books" %></title>
     <link rel="shortcut icon" href="<%=asset_path("logo.png")%>" >
 
 
@@ -26,7 +26,7 @@
     <footer class="row">
       <div class="large-12 columns">
         <hr>
-        <p>© MovieStore 2014</p>
+        <p>© BookStore 2014</p>
       </div>
     </footer>
 
