--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,24 +1,24 @@
 <div id="mycart" class="small-10 small-centered medium-8 large-8 column">
   <div class="p1 glassy-bg mb1 text-center radius-l1 radius-r1">
     <h4>My Cart</h4>
-    <p class="mb0"> You've selected <span class="cart-count"><%=current_user.cart_count%></span> movies!</p>
+    <p class="mb0"> You've selected <span class="cart-count"><%=current_user.cart_count%></span> books!</p>
   </div>
 
-  <% @cart_movies.each do |movie|%>
-  <div data-equalizer class="cart-movie large-12 column mb1">
+  <% @cart_books.each do |book|%>
+  <div data-equalizer class="cart-book large-12 column mb1">
     <div class="column large-2 text-center p0" data-equalizer-watch>
-      <%=link_to movie do%>
-        <%=image_tag movie.poster, class: "radius-l1"%>
+      <%=link_to book do%>
+        <%=image_tag book.poster, class: "radius-l1"%>
       <%end%>
     </div>
     <div class="column large-7 glassy-bg text-center" data-equalizer-watch>
-        <p class="scale ptm"> <%= movie.title %> </p>
+        <p class="scale ptm"> <%= book.title %> </p>
     </div>
     <div class="column large-3 primary-bg text-center radius-r1" data-equalizer-watch>
-      <%=link_to "" , data: {targetUrl: remove_from_cart_path(movie)} do%>
+      <%=link_to "" , data: {targetUrl: remove_from_cart_path(book)} do%>
         <i class="fi-x right"></i>
       <%end%>
-      <h4 class="scale">$ <%= movie.price %></h4>
+      <h4 class="scale">$ <%= book.price %></h4>
     </div>
   </div>
   <%end%>
