--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,55 @@
+<%#= render "title_search_box" %>
+<div class="column">
+  <h5>
+    <a class="show-advanced-search">Advanced Search <span class="fi-plus"/></a>
+  </h5>
+</div>
+
+<div class="column">
+  <div class="advanced-search hide form-container glassy-bg columns">
+    <a class="close-advanced-search fi-x"></a>
+    <h4>Advanced Search</h4>
+    <%= search_form_for @search, url: search_books_path, method: :post do |f| %>
+      <%= f.condition_fields do |c| %>
+        <div class="large-4 small-4 columns">
+          <%= c.attribute_fields do |a| %>
+            <%= a.attribute_select nil, class: "radius" %>
+          <% end %>
+        </div>
+        <div class="large-4 small-4 columns">
+          <%= c.predicate_select Hash.new, class: "radius" %>
+        </div>
+        <div class="large-4 small-4 columns">
+          <%= c.value_fields do |v| %>
+            <%= v.text_field :value, class: "radius" %>
+          <% end %>
+        </div>
+      <% end %>
+      <h5>Sort</h5>
+      <div class="column">
+      <%= f.sort_fields do |s| %>
+        <%= s.sort_select Hash.new, class: "large-5 small-4 columns mrs radius" %>
+      <% end %>
+      </div>
+      <%= f.submit "Search", class: "radius button" %>
+    <% end %>
+  </div>
+</div>
+
 <h4 class="column">Featured Books</h4>
+<div class="row right padm">
+<div class="column">
+  <div class="filter-label red radius">
+    <%= sort_link @search, :title %>
+  </div>
+  <div class="filter-label dark-golden-rod">
+    <%= sort_link @search, :price, "Price" %>
+  </div>
+  <div class="filter-label dark-slate-gray">
+    <%= sort_link @search, :release_year, "Release Year" %>
+  </div>
+</div>
+</div>
 <div class="column">
   <ul class="books-grid no-bullet row">
     <% @books.each do |book| %>
