--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
       <ul class="right">
         <%if signed_in?%>
           <li>
+            <%=link_to "Share", user_shared_books_path(current_user.id)%>
+          </li>
+          <li>
             <%= link_to cart_path do%>
               <i class="fi-shopping-cart"></i> My Cart (<span class="cart-count"><%=current_user.cart_count%></span>)
             <%end%>
@@ -34,12 +37,7 @@
       <ul class="left">
         <li class="has-form">
           <div class="row collapse">
-            <div class="large-8 small-9 columns">
-              <input type="text" class="radius-ls expand" placeholder="Find Book">
-            </div>
-            <div class="large-4 small-3 columns">
-              <a href="#" class=" radius-rs button">Search</a>
-            </div>
+            <%= yield(:search) %>
           </div>
         </li>
       </ul>
