--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
     <title><%= content_for?(:title) ? yield(:title) : "BookStore - Online books" %></title>
     <link rel="shortcut icon" href="<%=asset_path("logo.png")%>" >
 
-
+    <%= yield(:search) %>
+    
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
