--- a/app/views/shared_books/index.html.erb
+++ b/app/views/shared_books/index.html.erb
@@ -1,26 +1,29 @@
-<h1>Your Shared Books</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Book</th>
-      <th>Credit price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @shared_books.each do |shared_book| %>
-      <tr>
-        <td><%= shared_book.book.title %></td>
-        <td><%= shared_book.credit_price %></td>
-        <td><%= link_to 'Edit', edit_shared_book_path(shared_book) %></td>
-        <td><%= link_to 'Destroy', shared_book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<h4>Your Shared Books</h4>
 <br>
-
-<%= link_to 'New Shared book', new_shared_book_path %>
+<div class="column">
+  <ul class="books-grid no-bullet row">
+    <% @shared_books.each do |shared_book| %>
+      <li class="large-3 medium-4 small-12 column">
+        <h7>Credit Price <%= shared_book.credit_price %></h7>
+        <%= link_to 'Edit Price', edit_shared_book_path(shared_book), class: "right" %>
+        <div class="book-card padly">
+          <%= link_to shared_book.book, class: "poster" do %>
+            <%= image_tag shared_book.book.poster %>
+          <% end %>
+          <div class="book-info ell glassy-bg padmy padlx">
+            <div class="title">
+              <h6><%= shared_book.book.title %> <span>(<%= shared_book.book.release_year %>)</span></h6>
+            </div>
+            <p class="left price label book-label radius">$ <%= shared_book.book.price %></p>
+            <%= link_to shared_book.book.isbn, class: "right" do %>
+              <%= image_tag asset_path("isbn_logo.png") %>
+            <% end %>
+            <br><br>
+            <%= link_to 'Remove Book', shared_book, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
+<%= link_to 'Add Shared book', new_shared_book_path %>
