add recommendations and improve flow of shared books

--- a/app/views/books/_like_form.html.erb
+++ b/app/views/books/_like_form.html.erb
@@ -1,6 +1,6 @@
 <%if signed_in?%>
   <div id="like_form">
-  <% if current_user.likes?(@book) %>
+  <% if current_user.b_likes?(@book) %>
     <%= render 'books/unlike' %>
   <% else %>
     <%= render 'books/like' %>
