--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,9 @@
 <%#= render "title_search_box" %>
 <div class="column">
-  <h5>
-    <a class="show-advanced-search">Search Books <span class="fi-plus"/></a>
-  </h5>
+<h4>
+    <a class="show-advanced-search" style="color:white;">Search Books <span class="fi-plus"/></a>
+</h4>
 </div>
-
 <div class="column">
   <div class="advanced-search hide form-container glassy-bg columns">
     <a class="close-advanced-search fi-x"></a>
