--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,10 @@
-<%=render 'like_form' %>
 <div class="large-3 small-12 column">
   <%=image_tag @book.poster%>
+  <p>
+  <%=render 'like_form' %>
+  </p>
 </div>
+
 <div class="large-9 small-12 column">
   <h3>
     <%= @book.title %>
@@ -12,7 +15,7 @@
   </h3>
   <p class="label book-label radius mb1">$ <%= @book.price %></p>
 
-  <p><%= @book.description %></p>
+  <p style="color:white;"><%= @book.description %></p>
 
   <%if signed_in?%>
     <%=link_to "", class: "button", data: {target: @cart_action, addUrl: add_to_cart_path(@book), removeUrl: remove_from_cart_path(@book)} do%>
