--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <li class="name">
         <h1>
           <a href="/">
-            <i class="fi-play-video"></i> BookStore
+            <i class="fi-book"></i> BookHive
           </a>
         </h1>
       </li>
@@ -22,6 +22,9 @@
           </li>
           <li>
             <%=link_to "Share", user_shared_books_path(current_user.id)%>
+          </li>
+          <li>
+            <%=link_to "Recommendations", recommendations_path()%>
           </li>
           <li>
             <%= link_to cart_path do%>
