--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,30 +1,69 @@
-<div class="large-3 small-12 column">
-  <%=image_tag @book.poster%>
-  <p>
-  <%=render 'like_form' %>
-  </p>
+<div class="row padly">
+  <div class="large-3 small-12 column">
+    <%=image_tag @book.poster%>
+    <p>
+    <%=render 'like_form' %>
+    </p>
+  </div>
+  
+  <div class="large-9 small-12 column">
+    <h3>
+      <%= @book.title %>
+      (<%= @book.release_year %>)
+      <%=link_to @book.isbn do%>
+        <%=image_tag asset_path("isbn_logo.png")%>
+      <%end%>
+    </h3>
+    <p class="label book-label radius mb1">$ <%= @book.price %></p>
+  
+    <p style="color:white;"><%= @book.description %></p>
+  
+    <%if signed_in?%>
+      <%=link_to new_book_shared_book_path(@book.id), class: "button" do%>
+        <i class="fi-share"></i> 
+        Share this book
+      <%end%>
+    <%end%>
+  </div>
 </div>
+<div class="row padly">This book, <%=link_to @book.title, @book %> is shared by these users</div>
+  <div class="small-12 medium-12 large-10 column">
+    
+  <% @shared_books.each do |sbook|%>
+  <% unless sbook.user_id==current_user.id%>
+    <% user=User.find(sbook.user_id)%>
+    <div data-equalizer class="cart-book large-12 column mb1">
+      <div class="column large-1 text-center p0" data-equalizer-watch>
+        <%=link_to @book do%>
+          <%=image_tag @book.poster, class: "radius-l1"%>
+        <%end%>
+      </div>
+      <div class="column large-4 glassy-bg" data-equalizer-watch>
+        <div class="row text-center padly">
+        <%= link_to user_shared_books_path(user.id) do%>
+          <%= image_tag avatar_url(user)%>
+        <%end%>
+        </div>
+        shared by <%= link_to user.email, user_shared_books_path(user.id) %>
+      </div>
 
-<div class="large-9 small-12 column">
-  <h3>
-    <%= @book.title %>
-    (<%= @book.release_year %>)
-    <%=link_to @book.isbn do%>
-      <%=image_tag asset_path("isbn_logo.png")%>
-    <%end%>
-  </h3>
-  <p class="label book-label radius mb1">$ <%= @book.price %></p>
-
-  <p style="color:white;"><%= @book.description %></p>
-
-  <%if signed_in?%>
-    <%=link_to "", class: "button", data: {target: @cart_action, addUrl: add_to_cart_path(@book), removeUrl: remove_from_cart_path(@book)} do%>
-      <i class="fi-shopping-cart"></i>
-      <span><%=@cart_action%></span> Cart
-    <%end%>
-    <%=link_to new_book_shared_book_path(@book.id), class: "button" do%>
-      <i class="fi-share"></i> 
-      Share this book
+      <div class="column large-4 glassy-bg text-center radius-r1" data-equalizer-watch>
+        <div class="row padly">
+          <%=link_to "View", sbook%>
+        </div>
+        <div class="row padly">
+          <%if signed_in?%>
+            <%=link_to "", data: {target: @cart_action, addUrl: add_to_cart_path(sbook), removeUrl: remove_from_cart_path(sbook)} do%>
+            <i class="fi-shopping-cart"></i>
+            <span><%=@cart_action%></span> Cart
+            <%end%>
+          <%end%>
+        </div>        
+      </div>
+      <div class="column large-3 primary-bg text-center radius-r1" data-equalizer-watch>
+        <h4 class="scale padly"> <%= sbook.credit_price %> credits</h4>
+      </div>
+    </div>
     <%end%>
   <%end%>
 </div>
