--- a/app/views/shared_books/index.html.erb
+++ b/app/views/shared_books/index.html.erb
@@ -1,12 +1,13 @@
-<div class="row">
-  <div class="small-6 column left">
+<% if params[:user_id] %>
+<div class="row padly">
+  <div class="small-6 column left padly">
     <%= image_tag avatar_url(@user) %>
     <%= link_to @user.email, user_shared_books_path(@user.id) %>
     <h5>
       Shared Books
     </h5>
   </div>
-  <div class="small-6 column right">
+  <div class="small-6 column right padly">
     <%= render 'layouts/stats' %>
     <%= render 'users/follow_form' %>
   </div>
@@ -40,3 +41,4 @@
     <% end %>
   </ul>
 </div>
+<%end%>
