--- a/app/views/shared_books/show.html.erb
+++ b/app/views/shared_books/show.html.erb
@@ -1,3 +1,17 @@
+<div class="row padly">
+  <div class="small-6 column left padly">
+    <%= image_tag avatar_url(@user) %>
+    <%= link_to @user.email, user_shared_books_path(@user.id) %>
+    <h5>
+      Shared Books
+    </h5>
+  </div>
+  <div class="small-6 column right padly">
+    <%= render 'layouts/stats' %>
+    <%= render 'users/follow_form' %>
+  </div>
+</div>
+
 <div class="large-3 small-12 column">
   <%=image_tag @book.poster%>
 </div>
@@ -18,10 +32,6 @@
     <%=link_to "", class: "button", data: {target: @cart_action, addUrl: add_to_cart_path(@shared_book), removeUrl: remove_from_cart_path(@shared_book)} do%>
       <i class="fi-shopping-cart"></i>
       <span><%=@cart_action%></span> Cart
-    <%end%>
-    <%=link_to new_book_shared_book_path(@book.id), class: "button" do%>
-      <i class="fi-share"></i> 
-      Share this book
     <%end%>
   <%end%>
 </div>
