--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<%#= render "title_search_box" %>
+<%= render "title_search_box" %>
 <div class="column">
 <h4>
     <a class="show-advanced-search" style="color:white;">Search Books <span class="fi-plus"/></a>
