--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
       <ul class="left">
         <li class="has-form">
           <div class="row collapse">
-            <%= yield(:search) %>
+          <%= yield(:simple) %>
           </div>
         </li>
       </ul>
