Add photo upload for shared book

--- a/app/views/books/_unlike.html.erb
+++ b/app/views/books/_unlike.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(current_user.book_like.find_by(book_id: @book.id),
              html: { method: :delete },
              remote: true) do |f| %>
-  <%= f.submit "Unlike", class: "button round" %>
+  <%= f.submit "Unlike", class: "button expand medium" %>
 <% end %>
