--- a/app/views/books/_like.html.erb
+++ b/app/views/books/_like.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_user.book_like.build, remote:true) do |f| %>
   <div><%= hidden_field_tag :book_id, @book.id %></div>
-  <%= f.submit "Like", class: "button round"%>
+  <%= f.submit "Like", class: "button expand medium"%>
 <% end %>
