--- a/app/views/shared_books/index.html.erb
+++ b/app/views/shared_books/index.html.erb
@@ -22,7 +22,7 @@
         <%= link_to 'Edit Price', edit_shared_book_path(shared_book), class: "right" %>
         <div class="book-card padly">
           <%= link_to shared_book, class: "poster" do %>
-            <%= image_tag shared_book.book.poster %>
+            <%= image_tag shared_book.shared_book_image_url(:thumb).to_s %>
           <% end %>
           
           <div class="book-info ell glassy-bg padmy padlx">
