--- a/app/views/shared_books/show.html.erb
+++ b/app/views/shared_books/show.html.erb
@@ -13,7 +13,9 @@
 </div>
 
 <div class="large-3 small-12 column">
-  <%=image_tag @book.poster%>
+    <%= link_to @shared_book.shared_book_image_url.to_s, class: "poster" do %>
+      <%= image_tag @shared_book.shared_book_image_url(:thumb).to_s %>
+    <%end%>
 </div>
 
 <div class="large-9 small-12 column">
