--- a/app/views/books/_title_search_box.html.erb
+++ b/app/views/books/_title_search_box.html.erb
@@ -1,9 +1,9 @@
 <% content_for :simple do %>
-  <div class="large-8 small-9 columns">
+  <div class="large-8 columns">
   <%= search_form_for @simple do |f| %>
     <%= f.text_field :title_cont, class: "radius-left expand", placeholder: "Movie title" %>
   </div>
-    <div class="large-4 small-3 columns">
+    <div class="large-4 columns">
       <%= f.submit "Search", class: "radius-right button" %>
     </div>
   <% end %>
