--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 <ul class="tabs" data-tab role="tablist">
   <li class="tab-title active" role="presentational" ><a href="#panel1-1" role="tab" tabindex="0" aria-selected="true" controls="panel1-1">Feeds</a></li>
   <li class="tab-title" role="presentational" ><a href="#panel1-2" role="tab" tabindex="0"aria-selected="false" controls="panel1-2">Shared Books</a></li>
-  <li class="tab-title" role="presentational"><a href="#panel2-3" role="tab" tabindex="0" aria-selected="false" controls="panel2-3">Recommendations</a></li>
+  <li class="tab-title" role="presentational"><a href="#panel1-3" role="tab" tabindex="0" aria-selected="false" controls="panel1-3">Recommendations</a></li>
 </ul>
 </div>
 
@@ -47,7 +47,40 @@
     </div>
   </section>
 
+
   <section role="tabpanel" aria-hidden="true" class="content" id="panel1-2">
+    <div class="row padly">
+      <div class="column">
+        <ul class="books-grid no-bullet row">
+          <% @shared_books.each do |shared_book| %>
+            <li class="large-3 medium-4 small-12 column left">
+              <h7>Credit Price <%= shared_book.credit_price %></h7>
+              <%= link_to 'Edit Price', edit_shared_book_path(shared_book), class: "right" %>
+              <div class="book-card padly">
+                <%= link_to shared_book, class: "poster" do %>
+                  <%= image_tag shared_book.shared_book_image_url(:thumb).to_s %>
+                <% end %>
+                
+                <div class="book-info ell glassy-bg padmy padlx">
+                  <div class="title">
+                    <h6><%= shared_book.book.title %> <span>(<%= shared_book.book.release_year %>)</span></h6>
+                  </div>
+                  <p class="left price label book-label radius">$ <%= shared_book.book.price %></p>
+                  <%= link_to shared_book.book.isbn, class: "right" do %>
+                    <%= image_tag asset_path("isbn_logo.png") %>
+                  <% end %>
+                  <br><br>
+                  <%= link_to 'Remove Book', shared_book, method: :delete, data: { confirm: 'Are you sure?' } %>
+                </div>
+              </div>
+            </li>
+          <% end %>
+        </ul>
+      </div>    
+    </div>
+  </section>
+
+  <section role="tabpanel" aria-hidden="true" class="content" id="panel1-3">
     <div class="column">
       <ul class="books-grid no-bullet row">
         <% @recommendations.each do |book| %>
@@ -72,9 +105,6 @@
     </div>   
   </section>
 
-  <section role="tabpanel" aria-hidden="true" class="content" id="panel1-3">
-    
-  </section>
 
 </div>
 
