--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1149,15 +1149,15 @@ $switch-active-color: $primary-color;
 // TABS
 //
 
-// $include-html-tabs-classes: $include-html-classes;
+ $include-html-tabs-classes: $include-html-classes;
 
-// $tabs-navigation-padding: rem-calc(16);
-// $tabs-navigation-bg-color: #efefef  ;
-// $tabs-navigation-active-bg-color: #fff;
-// $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
-// $tabs-navigation-font-color: #222;
+ $tabs-navigation-padding: rem-calc(6);
+ $tabs-navigation-bg-color: $primary-color  ;
+ $tabs-navigation-active-bg-color:rgba(255, 255, 255, 0) ;
+// $tabs-navigation-hover-bg-color: scale-color(rgba(255, 255, 255, 0), $lightness: -14%);
+ $tabs-navigation-font-color: #fff;
 // $tabs-navigation-active-font-color: $tabs-navigation-font-color;
-// $tabs-navigation-font-size: rem-calc(16);
+ $tabs-navigation-font-size: rem-calc(14);
 // $tabs-navigation-font-family: $body-font-family;
 
 // $tabs-content-margin-bottom: rem-calc(24);
