--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,6 @@
 <%= render "title_search_box" %>
+
+<div class="row padly">  
 <div class="column">
 <h4>
     <a class="show-advanced-search" style="color:white;">Search Books <span class="fi-plus"/></a>
@@ -34,6 +36,8 @@
     <% end %>
   </div>
 </div>
+</div>
+
 
 <h4 class="column">Featured Books</h4>
 <div class="row right padm">
