Add messaging to app

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,9 @@
           </li>
           <%end%>
           <li>
+            <%= link_to 'Your Conversations', conversations_path %>
+          </li>
+          <li>
             <%= link_to cart_path do%>
               <i class="fi-shopping-cart"></i> My Cart (<span class="cart-count"><%=current_user.cart_count%></span>)
             <%end%>
